# common-commit

./: CHANGELOG.md  README.md  pyproject.toml
common_commit/: main.py
tests/: pyproject.toml
