[tool.poetry]
name = "common-commit"
version = "0.5.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common_commit"}]

[tool.poetry.dependencies]
python = "^3.10"
conventional-commit = "^0.4.2"
commitizen = "^3.5.3"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
version_files = ["pyproject.toml:version"]
update_changelog_on_bump = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
